--- a/src/test/resources/org/rust/lang/core/parser/fixtures/complete/expr.txt
+++ b/src/test/resources/org/rust/lang/core/parser/fixtures/complete/expr.txt
@@ -832,6 +832,35 @@ FILE
               PsiElement(})('}')
         PsiElement(;)(';')
       PsiWhiteSpace('\n\n    ')
+      RsExprStmtImpl(EXPR_STMT)
+        RsCallExprImpl(CALL_EXPR)
+          RsPathExprImpl(PATH_EXPR)
+            RsPathImpl(PATH)
+              PsiElement(identifier)('foo')
+          RsValueArgumentListImpl(VALUE_ARGUMENT_LIST)
+            PsiElement(()('(')
+            RsPathExprImpl(PATH_EXPR)
+              RsPathImpl(PATH)
+                PsiElement(identifier)('bar')
+            PsiElement(,)(',')
+            PsiWhiteSpace(' ')
+            RsLitExprImpl(LIT_EXPR)
+              PsiElement(BOOL_LITERAL)('true')
+            PsiElement(,)(',')
+            PsiWhiteSpace(' ')
+            RsLitExprImpl(LIT_EXPR)
+              PsiElement(STRING_LITERAL)('""')
+            PsiElement(,)(',')
+            PsiWhiteSpace(' ')
+            RsLitExprImpl(LIT_EXPR)
+              PsiElement(INTEGER_LITERAL)('1')
+            PsiElement(,)(',')
+            PsiWhiteSpace(' ')
+            RsLitExprImpl(LIT_EXPR)
+              PsiElement(FLOAT_LITERAL)('1.1')
+            PsiElement())(')')
+        PsiElement(;)(';')
+      PsiWhiteSpace('\n\n    ')
       RsRetExprImpl(RET_EXPR)
         PsiElement(return)('return')
         PsiWhiteSpace(' ')
