--- a/src/test/resources/org/rust/lang/core/parser/fixtures/partial/exprs.txt
+++ b/src/test/resources/org/rust/lang/core/parser/fixtures/partial/exprs.txt
@@ -111,5 +111,212 @@ FILE
           RsFieldLookupImpl(FIELD_LOOKUP)
             PsiElement(INTEGER_LITERAL)('0e92')
         PsiElement(;)(';')
+      PsiWhiteSpace('\n\n    ')
+      RsExprStmtImpl(EXPR_STMT)
+        RsCallExprImpl(CALL_EXPR)
+          RsPathExprImpl(PATH_EXPR)
+            RsPathImpl(PATH)
+              PsiElement(identifier)('foo1')
+          RsValueArgumentListImpl(VALUE_ARGUMENT_LIST)
+            PsiElement(()('(')
+            RsLitExprImpl(LIT_EXPR)
+              PsiElement(INTEGER_LITERAL)('1')
+            PsiElement(,)(',')
+            PsiWhiteSpace(' ')
+            PsiErrorElement:',' unexpected
+              PsiElement(,)(',')
+            PsiWhiteSpace(' ')
+            RsLitExprImpl(LIT_EXPR)
+              PsiElement(INTEGER_LITERAL)('2')
+            PsiElement())(')')
+        PsiElement(;)(';')
+      PsiWhiteSpace('\n    ')
+      RsExprStmtImpl(EXPR_STMT)
+        RsCallExprImpl(CALL_EXPR)
+          RsPathExprImpl(PATH_EXPR)
+            RsPathImpl(PATH)
+              PsiElement(identifier)('foo2')
+          RsValueArgumentListImpl(VALUE_ARGUMENT_LIST)
+            PsiElement(()('(')
+            PsiErrorElement:<expr> expected, got ','
+              <empty list>
+            PsiElement(,)(',')
+            PsiElement(,)(',')
+            PsiWhiteSpace(' ')
+            RsLitExprImpl(LIT_EXPR)
+              PsiElement(INTEGER_LITERAL)('2')
+            PsiElement())(')')
+        PsiElement(;)(';')
+      PsiWhiteSpace('\n    ')
+      RsExprStmtImpl(EXPR_STMT)
+        RsCallExprImpl(CALL_EXPR)
+          RsPathExprImpl(PATH_EXPR)
+            RsPathImpl(PATH)
+              PsiElement(identifier)('foo3')
+          RsValueArgumentListImpl(VALUE_ARGUMENT_LIST)
+            PsiElement(()('(')
+            RsLitExprImpl(LIT_EXPR)
+              PsiElement(INTEGER_LITERAL)('1')
+            PsiElement(,)(',')
+            PsiErrorElement:',' unexpected
+              PsiElement(,)(',')
+            PsiElement())(')')
+        PsiElement(;)(';')
+      PsiWhiteSpace('\n\n    ')
+      RsExprStmtImpl(EXPR_STMT)
+        RsCallExprImpl(CALL_EXPR)
+          RsPathExprImpl(PATH_EXPR)
+            RsPathImpl(PATH)
+              PsiElement(identifier)('foo4')
+          RsValueArgumentListImpl(VALUE_ARGUMENT_LIST)
+            PsiElement(()('(')
+            RsLitExprImpl(LIT_EXPR)
+              PsiElement(INTEGER_LITERAL)('1')
+            PsiElement(,)(',')
+            PsiErrorElement:<expr> expected, got ';'
+              <empty list>
+        PsiElement(;)(';')
+      PsiWhiteSpace('\n    ')
+      RsExprStmtImpl(EXPR_STMT)
+        RsCallExprImpl(CALL_EXPR)
+          RsPathExprImpl(PATH_EXPR)
+            RsPathImpl(PATH)
+              PsiElement(identifier)('foo5')
+          RsValueArgumentListImpl(VALUE_ARGUMENT_LIST)
+            PsiElement(()('(')
+            PsiErrorElement:<expr> expected, got ';'
+              <empty list>
+        PsiElement(;)(';')
+      PsiWhiteSpace('\n\n    ')
+      RsExprStmtImpl(EXPR_STMT)
+        RsCallExprImpl(CALL_EXPR)
+          RsPathExprImpl(PATH_EXPR)
+            RsPathImpl(PATH)
+              PsiElement(identifier)('foo6')
+          RsValueArgumentListImpl(VALUE_ARGUMENT_LIST)
+            PsiElement(()('(')
+            RsLitExprImpl(LIT_EXPR)
+              PsiElement(INTEGER_LITERAL)('1')
+            PsiElement(,)(',')
+            PsiErrorElement:<expr> expected, got 'let'
+              <empty list>
+      PsiWhiteSpace('\n    ')
+      RsLetDeclImpl(LET_DECL)
+        PsiElement(let)('let')
+        PsiWhiteSpace(' ')
+        RsPatWildImpl(PAT_WILD)
+          PsiElement(_)('_')
+        PsiWhiteSpace(' ')
+        PsiElement(=)('=')
+        PsiWhiteSpace(' ')
+        RsLitExprImpl(LIT_EXPR)
+          PsiElement(INTEGER_LITERAL)('0')
+        PsiElement(;)(';')
+      PsiWhiteSpace('\n    ')
+      RsExprStmtImpl(EXPR_STMT)
+        RsCallExprImpl(CALL_EXPR)
+          RsPathExprImpl(PATH_EXPR)
+            RsPathImpl(PATH)
+              PsiElement(identifier)('foo7')
+          RsValueArgumentListImpl(VALUE_ARGUMENT_LIST)
+            PsiElement(()('(')
+            PsiErrorElement:<expr> expected, got 'let'
+              <empty list>
+      PsiWhiteSpace('\n    ')
+      RsLetDeclImpl(LET_DECL)
+        PsiElement(let)('let')
+        PsiWhiteSpace(' ')
+        RsPatWildImpl(PAT_WILD)
+          PsiElement(_)('_')
+        PsiWhiteSpace(' ')
+        PsiElement(=)('=')
+        PsiWhiteSpace(' ')
+        RsLitExprImpl(LIT_EXPR)
+          PsiElement(INTEGER_LITERAL)('0')
+        PsiElement(;)(';')
+      PsiWhiteSpace('\n\n    ')
+      RsExprStmtImpl(EXPR_STMT)
+        RsBlockExprImpl(BLOCK_EXPR)
+          RsBlockImpl(BLOCK)
+            PsiElement({)('{')
+            PsiWhiteSpace(' ')
+            RsCallExprImpl(CALL_EXPR)
+              RsPathExprImpl(PATH_EXPR)
+                RsPathImpl(PATH)
+                  PsiElement(identifier)('foo8')
+              RsValueArgumentListImpl(VALUE_ARGUMENT_LIST)
+                PsiElement(()('(')
+                RsLitExprImpl(LIT_EXPR)
+                  PsiElement(INTEGER_LITERAL)('1')
+                PsiElement(,)(',')
+                PsiErrorElement:<expr> expected, got '}'
+                  <empty list>
+            PsiWhiteSpace(' ')
+            PsiElement(})('}')
+        PsiElement(;)(';')
+      PsiWhiteSpace('\n    ')
+      RsExprStmtImpl(EXPR_STMT)
+        RsBlockExprImpl(BLOCK_EXPR)
+          RsBlockImpl(BLOCK)
+            PsiElement({)('{')
+            PsiWhiteSpace(' ')
+            RsCallExprImpl(CALL_EXPR)
+              RsPathExprImpl(PATH_EXPR)
+                RsPathImpl(PATH)
+                  PsiElement(identifier)('foo9')
+              RsValueArgumentListImpl(VALUE_ARGUMENT_LIST)
+                PsiElement(()('(')
+                PsiErrorElement:<expr> expected, got '}'
+                  <empty list>
+            PsiWhiteSpace(' ')
+            PsiElement(})('}')
+        PsiElement(;)(';')
+      PsiWhiteSpace('\n\n    ')
+      RsExprStmtImpl(EXPR_STMT)
+        RsCallExprImpl(CALL_EXPR)
+          RsPathExprImpl(PATH_EXPR)
+            RsPathImpl(PATH)
+              PsiElement(identifier)('foo10')
+          RsValueArgumentListImpl(VALUE_ARGUMENT_LIST)
+            PsiElement(()('(')
+            RsLitExprImpl(LIT_EXPR)
+              PsiElement(INTEGER_LITERAL)('1')
+            PsiElement(,)(',')
+            PsiErrorElement:<expr> expected, got 'fn'
+              <empty list>
+      PsiWhiteSpace('\n    ')
+      RsFunctionImpl(FUNCTION)
+        PsiElement(fn)('fn')
+        PsiWhiteSpace(' ')
+        PsiElement(identifier)('a')
+        RsValueParameterListImpl(VALUE_PARAMETER_LIST)
+          PsiElement(()('(')
+          PsiElement())(')')
+        PsiWhiteSpace(' ')
+        RsBlockImpl(BLOCK)
+          PsiElement({)('{')
+          PsiElement(})('}')
+      PsiWhiteSpace('\n    ')
+      RsExprStmtImpl(EXPR_STMT)
+        RsCallExprImpl(CALL_EXPR)
+          RsPathExprImpl(PATH_EXPR)
+            RsPathImpl(PATH)
+              PsiElement(identifier)('foo11')
+          RsValueArgumentListImpl(VALUE_ARGUMENT_LIST)
+            PsiElement(()('(')
+            PsiErrorElement:<expr> expected, got 'fn'
+              <empty list>
+      PsiWhiteSpace('\n    ')
+      RsFunctionImpl(FUNCTION)
+        PsiElement(fn)('fn')
+        PsiWhiteSpace(' ')
+        PsiElement(identifier)('a')
+        RsValueParameterListImpl(VALUE_PARAMETER_LIST)
+          PsiElement(()('(')
+          PsiElement())(')')
+        PsiWhiteSpace(' ')
+        RsBlockImpl(BLOCK)
+          PsiElement({)('{')
+          PsiElement(})('}')
       PsiWhiteSpace('\n')
       PsiElement(})('}')
